add tags to spec
