# handlers/delete-advert.go
@@ -3,9 +3,9 @@ package handlers
 import (
 	"github.com/go-openapi/runtime/middleware"
 	//"github.com/kot13/vertigo/models"
-	"github.com/kot13/vertigo/restapi/operations"
+	"github.com/kot13/vertigo/restapi/operations/advert"
 )
 
-func DeleteAdvert(_ operations.DeleteAdvertIDParams) middleware.Responder {
-	return operations.NewDeleteAdvertIDNoContent()
+func DeleteAdvert(_ advert.DeleteAdvertIDParams) middleware.Responder {
+	return advert.NewDeleteAdvertIDNoContent()
 }
