# handlers/get-adverts.go
@@ -3,10 +3,10 @@ package handlers
 import (
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/kot13/vertigo/models"
-	"github.com/kot13/vertigo/restapi/operations"
+	"github.com/kot13/vertigo/restapi/operations/advert"
 )
 
-func GetAdverts(_ operations.GetAdvertParams) middleware.Responder {
+func GetAdverts(_ advert.GetAdvertParams) middleware.Responder {
 	payload := models.GetAdvertOKBody{
 		{
 			ID:     1,
@@ -16,5 +16,5 @@ func GetAdverts(_ operations.GetAdvertParams) middleware.Responder {
 		},
 	}
 
-	return operations.NewGetAdvertOK().WithPayload(payload)
+	return advert.NewGetAdvertOK().WithPayload(payload)
 }
