# handlers/health-check.go
@@ -3,11 +3,11 @@ package handlers
 import (
 	"github.com/go-openapi/runtime/middleware"
 	"github.com/kot13/vertigo/models"
-	"github.com/kot13/vertigo/restapi/operations"
+	"github.com/kot13/vertigo/restapi/operations/support"
 	"github.com/kot13/vertigo/version"
 )
 
-func HealthCheck(_ operations.GetHealthCheckParams) middleware.Responder {
+func HealthCheck(_ support.GetHealthCheckParams) middleware.Responder {
 	payload := &models.HealthCheck{
 		Status:    models.HealthCheckStatusOk,
 		BuildTime: version.BuildTime,
@@ -16,5 +16,5 @@ func HealthCheck(_ operations.GetHealthCheckParams) middleware.Responder {
 		Branch:    version.Branch,
 	}
 
-	return operations.NewGetHealthCheckOK().WithPayload(payload)
+	return support.NewGetHealthCheckOK().WithPayload(payload)
 }
